@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-03-05T01:09:01Z",
+  "timestamp" : "2025-03-07T01:09:44Z",
   "count_outdated" : 247,
   "uniques_outdated" : 215,
-  "count" : 248,
-  "uniques" : 216,
+  "count" : 251,
+  "uniques" : 218,
   "clones" : [
     {
       "timestamp": "2025-03-01T00:00:00Z",
@@ -13,6 +13,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-03-06T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
