@@ -1,11 +1,16 @@
 {
-  "count": 1,
-  "uniques": 1,
+  "count": 4,
+  "uniques": 3,
   "clones": [
     {
       "timestamp": "2025-03-01T00:00:00Z",
       "count": 1,
       "uniques": 1
+    },
+    {
+      "timestamp": "2025-03-06T00:00:00Z",
+      "count": 3,
+      "uniques": 2
     }
   ]
 }
